--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
+    "lodash": "^4.17.19",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-responsive-screen": "^1.4.1",
