--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.19",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-modal": "^11.5.6",
     "react-native-responsive-screen": "^1.4.1",
     "react-native-screens": "^2.11.0",
     "react-native-text": "^1.0.8"
