--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "release:android": "react-native run-android --variant=release --appId com.safetogo --main-activity MainActivity"
   },
   "dependencies": {
     "@react-navigation/native": "^5.7.1",
